<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="contentDescription">

        <LinearLayout
            android:id="@+id/rl_user_info"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:background="@drawable/bg"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_ui_head"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_above="@+id/tv_ui_nickname"
                android:layout_centerHorizontal="true"
                 />

            <TextView
                android:id="@+id/tv_ui_nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:text="eeee林"
                android:textColor="@color/colorTextWhite"
                android:textSize="18sp"/>

        </LinearLayout>

        <com.andruby.live.ui.customviews.LineControllerView
            android:id="@+id/lcv_ui_set"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/rl_user_info"
            android:layout_marginTop="@dimen/space_10"
            app:canNav="true"
            app:name="@string/app_set"
            />

        <com.andruby.live.ui.customviews.LineControllerView
            android:id="@+id/fanceview"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/lcv_ui_set"
            app:canNav="true"
            app:name="@string/app_fance"
            />

        <com.andruby.live.ui.customviews.LineControllerView
            android:id="@+id/followView"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/fanceview"
            app:canNav="true"
            app:name="@string/app_follow"
            />

        <com.andruby.live.ui.customviews.LineControllerView
            android:id="@+id/review"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/followView"
            app:canNav="true"
            app:name="@string/app_review"
            />

        <com.andruby.live.ui.customviews.LineControllerView
            android:id="@+id/lcv_ui_version"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/review"
            app:canNav="true"
            app:isBottom="true"
            app:name="@string/app_about"/>

        <com.andruby.live.ui.customviews.LineControllerView
            android:id="@+id/lcv_ui_logout"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/lcv_ui_version"
            android:layout_marginTop="29dp"
            android:textColor="@color/black"
            app:name="@string/btn_login_out"/>
    </LinearLayout>
</ScrollView>